# renesas_zmod4510

./: CMakeLists.txt  README.md  pyproject.toml  setup.py  zmod4510.py
python/: __init__.py  zmod4510.py
src/: main.c  sensor_interface.c  sensor_interface.h
src/hal/raspi/: rpi.c
zmod4510/: zmod4510.py
